# zero-to-production

./: .dockerignore  Cargo.toml  Dockerfile  README.md  configuration-local.yaml  configuration.yaml  spec.yaml
configuration/: default.yaml  local.yaml  production.yaml
migrations/: 20240421152700_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs
